# instructor_openai_embedding

./: LICENSE  README.md  setup.cfg  setup.py
src/InstructorOpenAIEmbeddings/: __init__.py  instructor_openai_embedding.py
