[metadata]
name = Instructor OpenAI Embedding
version = 0.0.1
author = Ching Pui WAN
author_email = cpwan@ust.hk
description = Client to call instructor model hosted in a openai-compatibale endpoint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpwan/instructor_openai_embedding
project_urls =
    Bug Tracker = https://github.com/cpwan/instructor_openai_embedding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    langchain_openai == 0.1.20
    transformers == 4.37.1

[options.packages.find]
where = src
